--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,19 @@ jobs:
           restore-keys: |
             maven-
 
+      - name: Setup Maven settings
+        run: |
+          mkdir -p ~/.m2
+          echo "<settings>
+                  <servers>
+                    <server>
+                      <id>github</id>
+                      <username>${{ secrets.GIT_USERNAME }}</username>
+                      <password>${{ secrets.GIT_PAT }}</password>
+                    </server>
+                  </servers>
+                </settings>" > ~/.m2/settings.xml
+
         # 4. Run Maven build
       - name: Build with Maven
         run: mvn -Dmaven.test.skip=true clean package
