--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,15 +9,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Checkout source code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up JDK 21 (early access)
+      # 2. Setup JDK
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '21-ea'
+          java-version: '21'
 
+      # 3. Cache Maven dependencies
       - name: Cache Maven packages
         uses: actions/cache@v4
         with:
@@ -26,6 +29,7 @@ jobs:
           restore-keys: |
             maven-
 
+      # 4. Configure GitHub Packages for Maven
       - name: Setup Maven settings
         run: |
           mkdir -p ~/.m2
@@ -39,27 +43,29 @@ jobs:
                   </servers>
                 </settings>" > ~/.m2/settings.xml
 
-        # 4. Run Maven build
+      # 5. Maven build
       - name: Build with Maven
         run: mvn -Dmaven.test.skip=true clean package
 
+      # 6. Docker login
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      # 7. Auto-generate tags (latest, sha, branch)
       - name: Extract metadata for tags
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ secrets.DOCKERHUB_USERNAME }}/banking-service
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/auth-service
           tags: |
             type=ref,event=branch
             type=sha
-            type=semver,pattern={{version}}
             type=raw,value=latest
 
+      # 8. Build + Push Docker image
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
