AuthService with tests

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,19 @@ jobs:
       - name: Build with Maven
         run: mvn -Dmaven.test.skip=true clean package
 
+      - name: Verify file permissions and readability
+        run: |
+          echo "Checking permissions for application.properties..."
+          # List the file's permissions (l) and path (a)
+          ls -la src/main/resources/application.properties
+
+          # Force set read permissions for all users just in case
+          chmod a+r src/main/resources/application.properties
+
+          echo "Reading file content to confirm access..."
+          # Cat the file to ensure the runner can read it fully
+          cat src/main/resources/application.properties
+
       # 6. Docker login
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
